arreglo notebook y modulo censo2022.py

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -10,13 +10,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "datasets_custom\\aa.csv\n"
+     ]
+    }
+   ],
    "source": [
     "from modules import censo2022 as cd\n",
-    "name = input('Ingrese nombre de arhivo para crear o sobreescribir')\n",
-    "cd.create_modified_file(name + '.csv')"
+    "from pathlib import Path\n",
+    "name = input('Ingrese nombre de arhivo para crear o sobreescribir') + '.csv'\n",
+    "file_route = Path('datasets')/ 'c2022_tp_c_resumen_adaptado.csv'\n",
+    "new_file_route = Path('datasets_custom')/name\n",
+    "cd.create_modified_file(new_file_route + '.csv')"
    ]
   }
  ],
@@ -36,7 +47,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
