--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -15,11 +15,29 @@
    "outputs": [],
    "source": [
     "from modules import censo2022 as cd\n",
+    "from modules import Conectividad_Internet as connectivity\n",
     "from pathlib import Path\n",
+    "\n",
     "name = input('Ingrese nombre de arhivo para crear o sobreescribir') + '.csv'\n",
     "file_route = Path('datasets')/ 'c2022_tp_c_resumen_adaptado.csv'\n",
     "new_file_route = Path('datasets_custom')/name\n",
     "cd.create_modified_file(new_file_route + '.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Haciendo uso de la funcion \"create_modified_file()\" de modules/Conexiones_internet, se genera un nuevo archivo con una nueva columna de conectividad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "connectivity.create_modified_file()"
    ]
   }
  ],
