--- a/consulta/incisos 7, 8 y 9.ipynb
+++ b/consulta/incisos 7, 8 y 9.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -166,6 +166,179 @@
     "    print(f'   {ind}.', elem[0] , '. Porcentaje: ' , elem[1] , '%.')\n",
     "    ind+= 1\n",
     "\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Consulta EJ8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Primero se importan los módulos y la función con la que se va a trabajar. También se definen las constantes que indican los índices:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "import pathlib\n",
+    "\n",
+    "JURISDICCION = 0\n",
+    "VARONES = 5\n",
+    "MUJERES = 9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se crea una lista vacia que va a contener la información de las jurisdicciones:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info_population = []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se crea una objeto con la ruta del archivo y se abre.\n",
+    "\n",
+    "También se crea el iterable: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = pathlib.Path('../datasets/c2022_tp_c_resumen_adaptado.csv')\n",
+    "file = open(path, mode='r', encoding='UTF-8')\n",
+    "reader = csv.reader(file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Iterando dos veces sobre **reader** se descarta la fila con la información de las columnas y la fila *Total del Pais*:\n",
+    "\n",
+    "*Se agrega ; al final de la instrucción para que no imprima*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "next(reader);\n",
+    "next(reader);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Con un **For** sobre el iterable se realiza el procesamiento del archivo linea por linea.\n",
+    "\n",
+    "-En la variable **women** se guarda la cantidad de mujeres de dicha jurisdicción. Se hace la conversión con *int()*.\n",
+    "\n",
+    "-En la variable **men** se guarda la cantidad de varones de dicha jurisdicción. Se hace la conversión con *int()*.\n",
+    "\n",
+    "-Dependiendo cuál sea mayor se restan, para obtener la diferencia. Se controla con un **If**. \n",
+    "\n",
+    "-Se crea una tupla *content*, dicha tupla tiene el nombre de la jurisdicción y la diferencia."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for line in reader:\n",
+    "    women = int(line[MUJERES])\n",
+    "    men = int(line[VARONES])\n",
+    "\n",
+    "    if (women > men):\n",
+    "        difference = women-men\n",
+    "    else:\n",
+    "        difference = men-women\n",
+    "\n",
+    "    content = (line[JURISDICCION], difference)\n",
+    "    info_population.append(content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Una vez cargada la lista con las tuplas:\n",
+    "\n",
+    "-Se ordena utilizando *sorted*, y *reverse=True* para que se ordene de mayor a menor.\n",
+    "\n",
+    "-Se utiliza una función *lambda* para indicar que hay que ordenar la lista a partir del elemento en el índice 1 de las tuplas. Correspondiente a la diferencia.\n",
+    "\n",
+    "-Con *slicing* **[:1]**, la lista únicamente contiene al primer elemento de la misma. Correspondiente al máximo.\n",
+    "\n",
+    "-Se guarda el elemento de la lista (tupla) en la variable **maximum**. Se accede con el índice **[0]**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "maximum = (sorted(info_population, key=lambda elem: elem[1], reverse=True)[:1])[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se imprime la tupla y se cierra el archivo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jurisdiccion con mayor brecha entre sexos al nacer es Buenos Aires . Brecha: 582858 .\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Jurisdiccion con mayor brecha entre sexos al nacer es', maximum[0], '. Brecha:', maximum[1], '.')\n",
     "file.close()"
    ]
   }
