Procesamiento de Conectividad

--- a/procesamiento/procesamiento datasets.ipynb
+++ b/procesamiento/procesamiento datasets.ipynb
@@ -16,15 +16,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
     "from pathlib import Path\n",
     "\n",
-    "path_read= Path ('./datasets/ar-airports.csv')\n",
-    "path_write= Path ('./datasets_custom/ar-airports-custom.csv')\n"
+    "path_read= Path ('../datasets/ar-airports.csv')\n",
+    "path_write= Path ('../datasets_custom/ar-airports-custom.csv')\n"
    ]
   },
   {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
        "260"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,6 +126,30 @@
    "metadata": {},
    "source": [
     "Para cada fila restante en el archivo de entrada se intenta convertir el valor en la sexta columna (la cual es la elevacion del aeropuerto) a un número flotante. Si la conversión es exitosa, se procede a determinar la categoría de elevación ('bajo', 'medio' o 'alto') y se agrega al archivo csv en la columna creada previamente. Si la conversión falla (porque la linea esta vacia o no es un numero), se captura la excepción ValueError y se agrega la cadena 'Sin altura' a la fila.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Procesamiento dataset n2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Haciendo uso de la funcion \"create_modified_file()\" de modules/Conexiones_internet, se genera un nuevo archivo con una nueva columna de conectividad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from funciones import Conectividad_internet as connectivity\n",
+    "connectivity.create_modified_file()"
    ]
   }
  ],
