importar correctamente las funciones

--- a/consultas/incisos 4,5 y 6.ipynb
+++ b/consultas/incisos 4,5 y 6.ipynb
@@ -10,32 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import demografia"
+    "from funciones import demografia"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m provinces \u001b[39m=\u001b[39m demografia\u001b[39m.\u001b[39;49mmostrarSegunPoblacion()\n\u001b[0;32m      2\u001b[0m \u001b[39mprint\u001b[39m(provinces)\n",
-      "File \u001b[1;32mc:\\Users\\Administrador\\Desktop\\facu\\python\\practica 3\\grupo24\\consulta\\demografia.py:129\u001b[0m, in \u001b[0;36mmostrarSegunPoblacion\u001b[1;34m()\u001b[0m\n\u001b[0;32m    126\u001b[0m provincias \u001b[39m=\u001b[39m __filtrar_provincias_por_poblacion(ecuacion, datos_censo[\u001b[39m2\u001b[39m:])\n\u001b[0;32m    128\u001b[0m datos_aeropuertos \u001b[39m=\u001b[39m __leer_archivo_csv(aeropuertos)\n\u001b[1;32m--> 129\u001b[0m __agregar_aeropuertos_a_provincias(datos_aeropuertos, provincias)\n\u001b[0;32m    131\u001b[0m datos_lagos \u001b[39m=\u001b[39m __leer_archivo_csv(lagos)\n\u001b[0;32m    132\u001b[0m __agregar_lagos_a_provincias(datos_lagos, provincias)\n",
-      "File \u001b[1;32mc:\\Users\\Administrador\\Desktop\\facu\\python\\practica 3\\grupo24\\consulta\\demografia.py:107\u001b[0m, in \u001b[0;36m__agregar_aeropuertos_a_provincias\u001b[1;34m(datos_aeropuertos, provincias)\u001b[0m\n\u001b[0;32m     99\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    100\u001b[0m \u001b[39mAgrega información de aeropuertos a las provincias correspondientes.\u001b[39;00m\n\u001b[0;32m    101\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    104\u001b[0m \u001b[39m    provincias (dict): Un diccionario que contiene las provincias a las que se agregarán los datos de los aeropuertos.\u001b[39;00m\n\u001b[0;32m    105\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    106\u001b[0m \u001b[39mfor\u001b[39;00m line \u001b[39min\u001b[39;00m datos_aeropuertos:\n\u001b[1;32m--> 107\u001b[0m         \u001b[39mif\u001b[39;00m (line[\u001b[39m24\u001b[39;49m] \u001b[39min\u001b[39;00m provincias):\n\u001b[0;32m    108\u001b[0m             provincias[line[\u001b[39m24\u001b[39m]][\u001b[39m\"\u001b[39m\u001b[39maeropuertos\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m.\u001b[39mappend(line[\u001b[39m3\u001b[39m])\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "provinces = demografia.mostrarSegunPoblacion()\n",
     "print(provinces)"
@@ -55,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import capitales_y_aeropuertos as cya"
+    "from funciones import capitales_y_aeropuertos as cya"
    ]
   },
   {
@@ -81,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import lagos_tamaño as lakes"
+    "from funciones import lagos_tamaño as lakes"
    ]
   },
   {
