--- a/consultas/Consulta1,2 y 3.ipynb
+++ b/consultas/Consulta1,2 y 3.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -94,6 +94,498 @@
     "\n",
     "for i,type in enumerate (types, start=1):\n",
     "  print (f'{i}) {type}') "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejercicio de consulta 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como necesitamos volver a iterar sobre el mismo archivo, se cierra y se vuelve a abrir para reiniciar el lector."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lectura.close\n",
+    "lectura= open (input_file, mode='r', encoding='UTF-8')\n",
+    "lector= csv.reader(lectura)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se le pide al usuario que ingrese un tipo de elevacion (alto, medio o bajo) para imprimir aquellos aeropuertos con dicha elevacion.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Aeropuertos con un valor de elevacion medio:\n",
+      "1) El Calafate - Commander Armando Tola International Airport\n",
+      "2) General E. Mosconi Airport\n",
+      "3) Almirante Marco Andres Zar Airport\n",
+      "4) Capitan D Daniel Vazquez Airport\n",
+      "5) Presidente Peron Airport\n",
+      "6) Comandante Espora Airport\n",
+      "7) Libertador Gral D Jose De San Martin Airport\n",
+      "8) Santa Rosa Airport\n",
+      "9) Pergamino Airport\n",
+      "10) El Tehuelche Airport\n",
+      "11) Puerto Deseado Airport\n",
+      "12) Santa Cruz Airport\n",
+      "13) Resistencia International Airport\n",
+      "14) General Urquiza Airport\n",
+      "15) Vicecomodoro Angel D. La Paz Aragonés Airport\n",
+      "16) Héroes De Malvinas Airport\n",
+      "17) Gobernador Gregores Airport\n",
+      "18) San Andrés de Giles Airport\n",
+      "19) Bell Ville Airport\n",
+      "20) Lago Viedma Airstrip\n",
+      "21) Mercedes Airport\n",
+      "22) Salto Airport\n",
+      "23) Corrientes Airport\n",
+      "24) Aeropuerto Nacional de Formosa\n",
+      "25) Lago Argentino Airport\n",
+      "26) Junin Airport\n",
+      "27) Paso De Los Libres Airport\n",
+      "28) Comodoro Pedro Zanni Airport\n",
+      "29) Reconquista Airport\n",
+      "30) Arrecifes Aeroclub Airport\n",
+      "31) Azul Airport\n",
+      "32) Bolívar Airport\n",
+      "33) Bragado Airport\n",
+      "34) Aeroclub Capitan Sarmiento\n",
+      "35) Carmen de Areco Airport\n",
+      "36) Chacabuco Airport\n",
+      "37) Chivilcoy Airport\n",
+      "38) Colón Airport\n",
+      "39) Estancia El Chañar Airport\n",
+      "40) Daireaux Airport\n",
+      "41) Los Toldos Airport\n",
+      "42) Gonzalez Chaves Airport\n",
+      "43) Tres Lomas Airport\n",
+      "44) Lincoln Airport\n",
+      "45) Batan Airport\n",
+      "46) Fumigaciones Ortega Airport\n",
+      "47) Olavarria Airport\n",
+      "48) La Noria Agricultural Airport\n",
+      "49) Rio Colorado Airport\n",
+      "50) América Airport\n",
+      "51) Saladillo Airport\n",
+      "52) El Pampero Airport\n",
+      "53) Lago Fagnano North Airport\n",
+      "54) La Siesta Airport\n",
+      "55) Savesa Airport\n",
+      "56) Venado Tuerto Airport\n",
+      "57) Puerto Esperanza Heliport\n",
+      "58) Presidente Néstor Kirchner Regional Airport\n",
+      "59) Curuzu Cuatia Airport\n",
+      "60) General Pico Airport\n",
+      "61) Monte Caseros Airport\n",
+      "62) Tres Arroyos Airport\n",
+      "63) Merlo Airport\n",
+      "64) Aeródromo Estancia Don Panos\n",
+      "65) Loma Alta Airport\n",
+      "66) Santa Juana Airport\n",
+      "67) Finca La Frontera Airport\n",
+      "68) Alejandro Roca Airport\n",
+      "69) El Toto Airport\n",
+      "70) Ameghino Airport\n",
+      "71) La Chacra Airport\n",
+      "72) Sigfrido Rohr Aviagro S.R.L. Airport\n",
+      "73) Augusto Leguizamon Airport\n",
+      "74) Añatuya Airport\n",
+      "75) Apóstoles Airport\n",
+      "76) Arias Airport\n",
+      "77) Arribeños Airport\n",
+      "78) Arroyito/Arcor Airport\n",
+      "79) Ascochinga Airport\n",
+      "80) Presidente Avellaneda Airport\n",
+      "81) Ayacucho Airport\n",
+      "82) Algarrobo/La Reforma Airport\n",
+      "83) Balcarce Aeroclub Airport\n",
+      "84) Estancia Los Cardos Airport\n",
+      "85) Estancia La Alborada\n",
+      "86) Agroservicio Doña Teresa Airport\n",
+      "87) Dutto Airport\n",
+      "88) Basavilbaso Airport\n",
+      "89) La Zulema Airport\n",
+      "90) Bella Vista Airport\n",
+      "91) Benito Juarez Airport\n",
+      "92) Dinaluca S.A. Airport\n",
+      "93) Pico Sayago Airport\n",
+      "94) Gran Ancona Airport\n",
+      "95) Malfatto Airport\n",
+      "96) Mahmet Fumigaciones Aereas Airport\n",
+      "97) Agroaereo Bragado Airport\n",
+      "98) Pablo Sierra Aeroaplicaciones Airport\n",
+      "99) Cabildo Airport\n",
+      "100) Calchaqui Airport\n",
+      "101) Aerocampo CSA airport\n",
+      "102) Cañada de Gomez Airport\n",
+      "103) Blondi Airport\n",
+      "104) Stiefel Airport\n",
+      "105) B&B Servicios Agropecuarios Airport\n",
+      "106) Cañada Rosquin Airport\n",
+      "107) Cañadon Seco Airport\n",
+      "108) Canals Airport\n",
+      "109) Quebracho Herrado Airport\n",
+      "110) San Patricio Airport\n",
+      "111) Estancia La Elisa Airport\n",
+      "112) Di Giuseppe Airport\n",
+      "113) Carhue Airport\n",
+      "114) Fumagro Airport\n",
+      "115) Haydee Airport\n",
+      "116) Carlos Casares Airport\n",
+      "117) Malatini Airport\n",
+      "118) Ottaviani Airport\n",
+      "119) Carlos Tejedor Airport\n",
+      "120) Los Rulos Airport\n",
+      "121) Casilda Airport\n",
+      "122) Establecimiento La Maria Pilar Airport\n",
+      "123) Aerofumigaciones Bartoli Hermanos Airstrip\n",
+      "124) Ceres Airport\n",
+      "125) Las 2 A Airport\n",
+      "126) Castelli Airport\n",
+      "127) Chajari Airport\n",
+      "128) Estancia La Choza Airport\n",
+      "129) Chajari Sur Airport\n",
+      "130) Chañar Ladeado Airport\n",
+      "131) Charata Airport\n",
+      "132) El Gringo Airport\n",
+      "133) Chepes Airport\n",
+      "134) Choele Choel Airport\n",
+      "135) Cipoletti Aeroclub Airport\n",
+      "136) Aeródromo de Clorinda\n",
+      "137) Haras Trelliris Airport\n",
+      "138) Laguna El Abuelo Airstrip\n",
+      "139) 13 De Diciembre Airport\n",
+      "140) Copetonas Airport\n",
+      "141) Aerofumigaciones Don Alejandro Airport\n",
+      "142) Fumigaciones Campagnucci Airport\n",
+      "143) Agroservicios Airport\n",
+      "144) Coronel Dorrego Airport\n",
+      "145) Coronel Pringles Airport\n",
+      "146) Brigadier D.H.E. Ruiz Airport\n",
+      "147) Chucuruc Aike Airport\n",
+      "148) Estancia La Julia Airport\n",
+      "149) Corral De Bustos Airport\n",
+      "150) Alvear Airport\n",
+      "151) Ita Ibate Airport\n",
+      "152) Cañada Quiroz Airport\n",
+      "153) Cruz Alta Airport\n",
+      "154) Cullen Airport\n",
+      "155) Curuzu Cuatia Aeroclub Airport\n",
+      "156) Estancia San Juan Airport\n",
+      "157) Fumigaciones Rodriguez Airport\n",
+      "158) Darregueira Airport\n",
+      "159) Laguna Salada Airport\n",
+      "160) Cabo Tres Puntas Airport\n",
+      "161) Estancia La Estrella Airport\n",
+      "162) Estancia El Polvorin Airport\n",
+      "163) Mazaredo Airport\n",
+      "164) La Floradora Airport\n",
+      "165) Yacimiento el Valle Lago del Desierto Airport\n",
+      "166) Diamante Airport\n",
+      "167) Eduardo Castex Airport\n",
+      "168) Aeródromo El Colorado\n",
+      "169) El Dorado Airport\n",
+      "170) Aeródromo de la Estancia San Rafael\n",
+      "171) El Salado Airport\n",
+      "172) El Sauzalito Airport\n",
+      "173) El Trebol Airport\n",
+      "174) Burdisso Airport\n",
+      "175) Bernardo's Airport\n",
+      "176) Estancia Santa Ana Airport\n",
+      "177) Estancia 8 de Julio Airport\n",
+      "178) Aeródromo San Hilario\n",
+      "179) Itá Caabó Airport\n",
+      "180) Estancia La Chaira Airport\n",
+      "181) Estancia La Matilde Airport\n",
+      "182) Estancia Las Lagunas Airport\n",
+      "183) Monte Aymond Airport\n",
+      "184) Estancia Santa Elena Airport\n",
+      "185) Traill Southeast Airport\n",
+      "186) La Angelita Airport\n",
+      "187) Firmat Aeroclub Airport\n",
+      "188) Firmat Airport\n",
+      "189) Estancia La Maciega Airport\n",
+      "190) La Lonja Airport\n",
+      "191) Aeródromo sede del Aeroclub Formosa\n",
+      "192) El Desafio\n",
+      "193) Galvez Airport\n",
+      "194) Cabaña Los Gatos Airport\n",
+      "195) Agroaire Airport\n",
+      "196) Pulverizaciones M.H. Airport\n",
+      "197) Agroaire Airport\n",
+      "198) Las Marias Airport\n",
+      "199) General Alvear Airport\n",
+      "200) General Deheza Airport\n",
+      "201) General La Madrid Airport\n",
+      "202) General Levalle Airport\n",
+      "203) Caa Cati Airport\n",
+      "204) Cereales Anahi Ruca Airport\n",
+      "205) Ñancu Airport\n",
+      "206) Estancia Trebolares Airport\n",
+      "207) General Pìnedo Airport\n",
+      "208) Kalbermatter Airport\n",
+      "209) Alfredo Sanchez Airport\n",
+      "210) General Pinto Airport\n",
+      "211) Dr. Arturo H. Illia Airport\n",
+      "212) General San Martin (La Pampa) Airport\n",
+      "213) General Villegas Airport\n",
+      "214) Gobernador Crespo Aeroclub Airport\n",
+      "215) Estancia Villa Corina Airport\n",
+      "216) Italaviation Airport\n",
+      "217) Guatraché Airport\n",
+      "218) Estancia Santa Elisa Airport\n",
+      "219) Las Horquetas Airport\n",
+      "220) Rospentek Airport\n",
+      "221) Henderson Airport\n",
+      "222) Huanguelen Airport\n",
+      "223) Plus Agroservicios Aereos S.R.L. Airport\n",
+      "224) Huinca Renanco Airport\n",
+      "225) Establecimiento La Adelita Airport\n",
+      "226) Fumigaciones Fredy Airport\n",
+      "227) Belingueres Aviación Airport\n",
+      "228) Ingeniero Juárez Airport\n",
+      "229) Ingeniero Luiggi Airport\n",
+      "230) Intendente Alvear Airport\n",
+      "231) Intendente Alvear\n",
+      "232) Azcarate Irastorza Airport\n",
+      "233) Don Hector Biondi Airport\n",
+      "234) Biondi Airport]\n",
+      "235) Itati Airport\n",
+      "236) Aeródromo Itatí\n",
+      "237) Jacinto Arauz Airport\n",
+      "238) Jardin De América Airport\n",
+      "239) Antares Airport\n",
+      "240) La Madrugada Airport\n",
+      "241) Blondi Airport\n",
+      "242) La Carlota Airport\n",
+      "243) Casajus\n",
+      "244) La Cruz Airport\n",
+      "245) La Paz Airport\n",
+      "246) La Paz Aeroclub Airport\n",
+      "247) La Pelada Airport\n",
+      "248) Laborde Airport\n",
+      "249) Laboulaye Airport\n",
+      "250) Estancia Río Bote Airport\n",
+      "251) Gendarme Barreto West Airport\n",
+      "252) Estancia Suyai - Lago Pueyrredon Airstrip\n",
+      "253) Laguna De Gomez Airport\n",
+      "254) Lanteri Airpiort\n",
+      "255) Laprida Airport\n",
+      "256) Alferez Armando Rodriguez Airport\n",
+      "257) Aeródromo Petruk\n",
+      "258) El Gaucho Airport\n",
+      "259) Las Rosas Airport\n",
+      "260) Horizonte Aplicaciones Areas Airport\n",
+      "261) Las Varillas Airport\n",
+      "262) Ginevro Airport\n",
+      "263) Leones Airport\n",
+      "264) La Esmeralda Airport\n",
+      "265) La Nueva Airport\n",
+      "266) Loberia Airport\n",
+      "267) Nika Airport\n",
+      "268) Los Amores NW Airport\n",
+      "269) Los Cardos Airport\n",
+      "270) Buena Esperanza Airport\n",
+      "271) El Cuadrado Airport\n",
+      "272) Establecimiento La Florencia Airport\n",
+      "273) Macachin Airport\n",
+      "274) Río Seco Airport\n",
+      "275) Samave Airport\n",
+      "276) Establecimiento El Araza Airport\n",
+      "277) Malabrigo Airport\n",
+      "278) Parque Hermoso Airport\n",
+      "279) Mar del Plata Gliding Club\n",
+      "280) Estancia El Cencerro Airport\n",
+      "281) Marcos Juarez Airport\n",
+      "282) Agrocelta Servicios Aereos Airport\n",
+      "283) Mercedes Airport\n",
+      "284) Pedro Ferrari Airport\n",
+      "285) El Pilincho Airport\n",
+      "286) Timboy Airport\n",
+      "287) Monte Maiz Airport\n",
+      "288) Monte Quemado Airport\n",
+      "289) Montecarlo Airport\n",
+      "290) Aeroboero Airport\n",
+      "291) Morteros Airport\n",
+      "292) Campo San Jose Airport\n",
+      "293) Juan Carlos Bagur Airport\n",
+      "294) Nogoya Airport\n",
+      "295) Nueve de Julio Airport\n",
+      "296) Olavarria Aeroclub Airport\n",
+      "297) Oliva Airport\n",
+      "298) Parana Aeroclub Airport\n",
+      "299) Parana Club De Planeadores Airport\n",
+      "300) Paso De Los Indios Airport\n",
+      "301) Las Lilas Airport\n",
+      "302) La Mariela Airport\n",
+      "303) Pellegrini Airport\n",
+      "304) El Recuerdo S.R.L. Airport\n",
+      "305) La Caldonia Airport\n",
+      "306) Servicios Aeronauticos\n",
+      "307) Aeródromo de la Estancia La Salvación\n",
+      "308) Bonetti Airport\n",
+      "309) Posadas Aeroclub Airport\n",
+      "310) Posta Cambio a Zalazar Airport\n",
+      "311) Aeródromo Estancia La Leonor\n",
+      "312) Termal Airport\n",
+      "313) Rovere Airport\n",
+      "314) Puán Airport\n",
+      "315) Puelches Airport\n",
+      "316) Puerto Deseado West Airport\n",
+      "317) Campamento Darwin Airport\n",
+      "318) Campamento Darwin West Airport\n",
+      "319) La Lucía Airport\n",
+      "320) Pettilep Airport\n",
+      "321) Quemu Quemu Airport\n",
+      "322) Rafaela Airport\n",
+      "323) Rauch Airport\n",
+      "324) Punta Ninfas Airport\n",
+      "325) Realicó Airport\n",
+      "326) La Lola Airport\n",
+      "327) Resistencia (City) Airport\n",
+      "328) Aeroclub Chaco Airport\n",
+      "329) Nueva Valencia Airport\n",
+      "330) Pettilep II Airport\n",
+      "331) Rio Bellavista Airport\n",
+      "332) Las Termas Airport\n",
+      "333) Rivadavia Airport\n",
+      "334) Fumigaciones Herbinsec Airport\n",
+      "335) Aeroagereo\n",
+      "336) La Amalia\n",
+      "337) Fumigaciones Herbinsec Airport\n",
+      "338) Rosario Del Tala Airport\n",
+      "339) Rufino Airport\n",
+      "340) BSG Airport\n",
+      "341) Parajon Airport\n",
+      "342) Santa Rita Airport\n",
+      "343) Estancia El Triángulo Airport\n",
+      "344) Saldungaray Airport\n",
+      "345) Santo Tomás de La Sierra Airport\n",
+      "346) Salliqueló Airport\n",
+      "347) Skare Airport\n",
+      "348) Laguna Aeroclub Airport\n",
+      "349) El Mirador\n",
+      "350) LAD 2198 Juan Jose Angelini\n",
+      "351) San Benito Airport\n",
+      "352) San Cayetano Heliport\n",
+      "353) San Cayetano Airport\n",
+      "354) San Cristobal Airport\n",
+      "355) San Francisco Airport\n",
+      "356) San Gregorio Airport\n",
+      "357) Vergnano Airport\n",
+      "358) San Jorge Airport\n",
+      "359) Bocca Airport\n",
+      "360) San Justo Airport\n",
+      "361) Chialva S. H. Airport\n",
+      "362) Casilda Fumigaciones Airport\n",
+      "363) Santa Clara de Saguier Airport\n",
+      "364) Fortín De Gainza Airport\n",
+      "365) San Alberto Airport\n",
+      "366) Gobernador Santillán Airport\n",
+      "367) Santo Tome Airport\n",
+      "368) Cóndor del Aire Airport\n",
+      "369) Lago Musters Airport\n",
+      "370) Colonia Sarmiento Airport\n",
+      "371) Fumigaciones Nando Airport\n",
+      "372) Sierra Grande Airport\n",
+      "373) Estancia 13 de Abril Airport\n",
+      "374) Sunchales Aeroclub Airport\n",
+      "375) Rincón de Luna Airport\n",
+      "376) El Ocho Airstrip\n",
+      "377) Estancia La Estrella Airport\n",
+      "378) Tandil Aeroclub Airport\n",
+      "379) Comandante Eduardo A. Olivero Airport\n",
+      "380) Tellier Airport\n",
+      "381) F.A.T. Airport\n",
+      "382) Establecimiento El 21 Airport\n",
+      "383) Tío Pujio Airport\n",
+      "384) Lago Escondido Airport\n",
+      "385) Estancia San Vicente Airport\n",
+      "386) Tostado Airport\n",
+      "387) Trenque Lauquen Airport\n",
+      "388) Ñanco Lauquen Airport\n",
+      "389) La Argentina Airport\n",
+      "390) Petrazzini Airport\n",
+      "391) Santagiulian Airport\n",
+      "392) Cerro Vanguardia Airstrip\n",
+      "393) Urdinarrain Airport\n",
+      "394) Estancia Los Lobles Airport\n",
+      "395) Valcheta Airport\n",
+      "396) Vedia Aeroclub\n",
+      "397) Veinticinco De Mayo Airport\n",
+      "398) Vera Airport\n",
+      "399) Martín Fierro Airport\n",
+      "400) Don Angel Airport\n",
+      "401) Beneficios S.R.L. Airport\n",
+      "402) Comequechen Airport\n",
+      "403) Estancia La Criolla Airport\n",
+      "404) Servicios Agroaereos Airport\n",
+      "405) Villa Angela Airport\n",
+      "406) Suboficial Auxiliar Miguel A. Cardone Airport\n",
+      "407) Villa Del Rosario Airport\n",
+      "408) Villa Maria Airport\n",
+      "409) Villa Minetti Airport\n",
+      "410) Suarez Aviación Airport\n",
+      "411) RAIG S.A. Airport\n",
+      "412) Villa Ocampo Airport\n",
+      "413) El Jagüel Airport\n",
+      "414) El Malagueño Airport\n",
+      "415) Timbo Airstrip\n",
+      "416) Yapeyú Airport\n",
+      "417) Planta Cruz Del Sur Heliport\n",
+      "418) Sanatorio Guemes Heliport\n",
+      "419) Swiss Medical Heliport\n",
+      "420) Cabo Vírgenes Heliport\n",
+      "421) San Joaquín Heliport\n",
+      "422) Transener S.A. Heliport\n",
+      "423) Unidad Penitenciaria N° 30 Heliport\n",
+      "424) San Isidro Labrador Heliport\n",
+      "425) Azcarate Irastorza Heliport\n",
+      "426) Sub-Inspector Official Gustavo Soarez de Souza Heliport\n",
+      "427) Saturnino Unzue Heliport\n",
+      "428) Morrison Heliport\n",
+      "429) Hospital Materno Infantil San Roque Heliport\n",
+      "430) Transener S.A. Heliport\n",
+      "431) Recreo / Transener S.A. Heliport\n",
+      "432) Transener S.A. Heliport\n",
+      "433) Hospital Municipal Heliport\n"
+     ]
+    }
+   ],
+   "source": [
+    "elevacion= input ('Ingrese el tipo de elevacion (alto, medio o bajo)')\n",
+    "airports=[]\n",
+    "\n",
+    "for line in lector: \n",
+    "  if line[23]== elevacion:\n",
+    "    airports.append (line[3])\n",
+    "\n",
+    "print (f'Aeropuertos con un valor de elevacion {elevacion}:')\n",
+    "\n",
+    "for i,airport in enumerate (airports, start=1):\n",
+    "  print (f'{i}) {airport}') \n"
    ]
   }
  ],
